# chinese_checkers

./: .gitignore  Cargo.toml  README  README.md  build.rs  game settings menu.txt  game settings.txt
chinese_checkers_client/: Cargo.toml
chinese_checkers_client/src/: ChineseCheckersMainWidget.rs  main.rs
chinese_checkers_server/: Cargo.toml
proto/: main.proto
src/: ColorChangeableLabel.rs  checkbox.rs  main.rs  radio.rs  test  tree.rs
tmp_bin/Contents/: Info.plist
tmp_bin/Contents/Resources/: AppIcon.icns
