[package]
name = "chinese_checkers"
version = "0.1.0"
authors = ["James Pedersen", "Daniel Milanovich"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = {version = "0.7.0", features = ["im", "svg"]}
# druid = {git = "https://github.com/linebender/druid", rev = "232314d", features = ["im", "svg", "raw-win-handle"]}
# druid-widget-nursery = {git = "https://github.com/linebender/druid-widget-nursery", rev = "3120a82"}
# druid = {git = "https://github.com/linebender/druid", rev = "f19ddf1", features = ["im", "svg"]}
# druid-widget-nursery = {git = "https://github.com/linebender/druid-widget-nursery", rev = "08c7e22"}
rand = "0.8.3"
lazy_static = "1.4.0"
tracing = "0.1.26"
once_cell = "1.8.0"
selectors = "0.23.0"
ouroboros = "0.9.5"
field-offset = "0.3.4"
ouroboros_macro = "0.9.5"
pangocairo = "0.14.0"
pangocairo-sys = "0.14.0"
raw-window-handle = "0.4.2"
rctree = "0.3.3"
thread_local = "1.1.3"
tracing-subscriber = "0.2.19"
tracing-wasm = "0.2.0"
ttf-parser = "0.12.3"
winres = "0.1"
winapi = "0.3.9"
raw-window-handle = "0.3.3"

[[bin]]
name = "ChineseCheckers"
path = "src/main.rs"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"
raw-window-handle = "0.3.3"

[target.x86_64-apple-darwin]
linker = "x86_64-apple-darwin14-clang"
ar = "x86_64-apple-darwin14-ar"

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-gcc-ar"